[package]
name = "raytracer"
version = "0.1.0"
authors = ["JolyneFr <934659050@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3"
image = "0.23"
indicatif = "0.15"
threadpool = "1.8"
rusttype = "0.9"
imageproc = "0.21"